Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110468

Qt uses deprecated Windows Layered Service Providers api resulting in wall of errors on Windows 11

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.0, 6.6.0
    • 6.4.2, 6.5.0 Beta1
    • Network
    • None
    • Windows
    • 0f50145e4 (dev), 730c66861 (6.5)

    Description

      We get this in our app and others have the same issue (although this issue is probably wrongly reported for being an QtCreator error) https://bugreports.qt.io/browse/QTCREATORBUG-26365 and the closed Fortune Cookie example: https://bugreports.qt.io/browse/QTBUG-100669

      Stackoverflow reply:

      https://stackoverflow.com/a/70978244/12619313
       
      > The behaviour you're seeing seems to be due to Layered Service Providers being deprecated as of Win11 (and potentially an upcoming Win10 update).

      GetHostByName is listed as deprecated, but GetHostName is not and also displays the same behaviour. In both cases the method queries any available namespace service providers first and then falls back to querying the NetBIOS name if none are found. As of Win11 it seems the call to enumerate the namespace service providers fails internally, generating the debug output you see.

      onecore\net\netprofiles\service\src\nsp\dll\namespaceserviceprovider.cpp(550)\nlansp_c.dll!00007FFCFC1FC759: (caller: 00007FFD2856388E) LogHr(1) tid(6e14) 8007277C No such service is known. The service cannot be found in the specified name space. 

      Attachments

        1. image-2023-01-23-09-01-03-176.png
          61 kB
          Elias Steurer
        2. QtTestHostName.zip
          5 kB
          Doug Rogers
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim Mårten Nordheim
            kelteseth Elias Steurer
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes